# Open3DGraphicsAdventureEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHYDRAX.cmake  FindOGREAL.cmake  FindOgrePhysX.cmake  FindPhysX.cmake  FindSkyX.cmake  FindTinyXML.cmake  HandleBuildType.cmake  LinkIfNotExists.cmake
data/ogre/: plugins.cfg  resources.cfg
data/ogre/media/fonts/SecretarialPool/: SecretarialPool.fontdef
data/ogre/media/fonts/larabie/: bluehighway.fontdef
data/ogre/media/hydrax/: ocean.hdx
data/ogre/media/materials/programs/GLSL/: simpleline.vert  stonewall.frag  test.frag
data/ogre/media/materials/scripts/: Colors.material  Maps.material  fish.material  ice.material  island.material  metal.material  objects2d.material  rock.material  simpleline.material  stonewall.material  test.material
data/ogre/media/materials/textures/: TextureUsageAgreement.txt  dirt_grayrocky_diffusespecular.dds  dirt_grayrocky_normalheight.dds  grass_green-01_diffusespecular.dds  grass_green-01_normalheight.dds  growth_weirdfungus-03_diffusespecular.dds  growth_weirdfungus-03_normalheight.dds  offsettextures
data/ogre/media/models/: meteor.xml
data/ogre/media/shader/: simpleline.vert  stonewall.frag  stonewall.vert  test.vert
data/ogre/media/skyx/: SkyX.material  SkyX_Clouds.fragment  SkyX_Clouds.hlsl  SkyX_Clouds.vertex  SkyX_Ground.fragment  SkyX_Ground.hlsl  SkyX_Ground.vertex  SkyX_Lightning.fragment  SkyX_Lightning.hlsl  SkyX_Lightning.vertex  SkyX_Moon.fragment  SkyX_Moon.hlsl  SkyX_Moon.vertex  SkyX_Skydome.fragment  SkyX_Skydome.hlsl  SkyX_Skydome.vertex  SkyX_VolClouds.fragment  SkyX_VolClouds.hlsl  SkyX_VolClouds.vertex  SkyX_VolClouds_Lightning.fragment  SkyX_VolClouds_Lightning.hlsl  SkyX_VolClouds_Lightning.vertex
ebuilds/dev-games/caelum/: caelum-0.6.1.ebuild
ebuilds/dev-games/caelum/files/: ogre-1.8.0.patch
ebuilds/dev-games/newton/: Manifest  newton-2.33.ebuild  newton-2.36.ebuild
ebuilds/dev-games/newton/files/: CMakeLists.txt  newton-2.33-ASSERT-to-ASSERTE.patch
engine/: CMakeLists.txt
engine/include/: ogreengine.h  ogrewidget.h  open3dgraphicsadventureengine.h  singleton.h
engine/src/: buoyancysimulationlistener.cpp  buoyancysimulationlistener.h  cameracontrolsystemframelistener.cpp  cameracontrolsystemframelistener.h  checkededge.cpp  checkededge.h  cone.cpp  cone.h  edge.cpp  edge.h  edgesorter.cpp  edgesorter.h  floatableobject.cpp  floatableobject.h  hydraxframelistener.cpp  hydraxframelistener.h  hydraxrttlistener.cpp  hydraxrttlistener.h  meshtriangleconverter.cpp  meshtriangleconverter.h  meteorcontacteventcallback.cpp  meteorcontacteventcallback.h  objectmover.cpp  objectmover.h  oceanheightobserver.cpp  oceanheightobserver.h  ogreengine.cpp  ogreengine.h  ogreutils.cpp  ogreutils.h  ogrewidget.cpp  ogrewidget.h  open3dgraphicsadventureengine.cpp  open3dgraphicsadventureengineimpl.cpp  open3dgraphicsadventureengineimpl.h  physxdebugsimulationlistener.cpp  physxdebugsimulationlistener.h  physxhelper.cpp  physxhelper.h  physxsimulationlistener.cpp  (+24 more)
gentoo_ebuilds/dev-games/: Manifest
gentoo_ebuilds/dev-games/PhysX/: PhysX-2.8.1.ebuild
gentoo_ebuilds/dev-games/caelum/: Manifest
gentoo_ebuilds/dev-games/files/: CMakeLists.txt
gentoo_ebuilds/dev-games/hydrax/: Manifest  hydrax-9999.ebuild
gentoo_ebuilds/dev-games/ogre-ccs/: Manifest  ogre-ccs-9999.ebuild
gentoo_ebuilds/dev-games/ogre-ccs/files/: add_install.patch  disable_demo.patch
gentoo_ebuilds/dev-games/ogrenewt/: ogrenewt-1.9999.ebuild
gentoo_ebuilds/dev-games/ogrephysx/: Manifest  ogrephysx-9999.ebuild
gentoo_ebuilds/dev-games/physx/: Manifest  physx-3.3.1.ebuild  physx-3.3.2.ebuild
gentoo_ebuilds/dev-games/skyx/: Manifest  skyx-0.4.ebuild  skyx-9999.ebuild
gentoo_ebuilds/dev-games/skyx/files/: CMakeLists.txt
gentoo_ebuilds/media-sound/ogreal/: Manifest  ogreal-9999.ebuild
gentoo_ebuilds/media-sound/ogreal/files/: ogre-1.8.0.patch  skybox.patch
gentoo_ebuilds/profiles/: repo_name
sample/: CMakeLists.txt  main.cpp  testwindow.cpp  testwindow.h
tests/: CMakeLists.txt
tests/src/: testogremeshconvert.cpp  testogremeshconvert.h  testpointsort.cpp  testpointsort.h  testpolyhedronclip.cpp  testpolyhedronclip.h  testpolyhedronvolumecalc.cpp  testpolyhedronvolumecalc.h
